Added Yahoo and Bing search test cases

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,30 +4,34 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.seta.testcases.GoogleSearchTests</td>
+<td>com.seta.testcases.YahooSearchTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyGoogleSearchFirstLinkTest</td>
+<td>verifyYahooSearchWithBadTermTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyGoogleSearchWithSpecialCharTermTest</td>
+<td>verifyYahooSearchWithMisSpelledCorrectionTermTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyGoogleSearchWithAlphaNumericCharTermTest</td>
+<td>verifyYahooSearchWithSpecialCharTermTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyGoogleSearchWithBadTermTest</td>
+<td>verifyYahooSearchTopThreeTermResultsTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyGoogleSearchWithMisSpelledCorrectionTermTest</td>
+<td>verifyYahooSearchWithAlphaNumericCharTermTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyYahooSearchFirstLinkTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
