--- a/test-output/old/Search Engine Test Automation/methods-not-run.html
+++ b/test-output/old/Search Engine Test Automation/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.seta.base.BaseClass.afterSuite</td></tr>
+<tr><td>com.seta.base.BaseClass.afterSuite</td></tr>
+<tr><td>com.seta.base.BaseClass.beforeSuite</td></tr>
+<tr><td>com.seta.base.BaseClass.beforeSuite</td></tr>
 </table>
