--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,34 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.seta.testcases.YahooSearchTests</td>
+<td>com.seta.testcases.BingSearchTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyYahooSearchWithBadTermTest</td>
+<td>verifyBingSearchWithSpecialCharTermTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyYahooSearchWithMisSpelledCorrectionTermTest</td>
+<td>verifyBingSearchWithAlphaNumericCharTermTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyYahooSearchWithSpecialCharTermTest</td>
+<td>verifyBingSearchFirstLinkTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyYahooSearchTopThreeTermResultsTest</td>
+<td>verifyBingTopThreeTermSearchResultsTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyYahooSearchWithAlphaNumericCharTermTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyYahooSearchFirstLinkTest</td>
+<td>verifyBingSearchWithMisSpelledCorrectionTermTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
