--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,48 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;YahooSearchTests.afterMethod(org.testng.ITestResult)[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="84f46f">  <td>24/02/06 12:44:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BingSearchTests.afterMethod(org.testng.ITestResult)[pri:0, instance:com.seta.testcases.BingSearchTests@76508ed1]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;YahooSearchTests.afterMethod(org.testng.ITestResult)[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;YahooSearchTests.afterMethod(org.testng.ITestResult)[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;YahooSearchTests.afterMethod(org.testng.ITestResult)[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;YahooSearchTests.afterMethod(org.testng.ITestResult)[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;YahooSearchTests.afterMethod(org.testng.ITestResult)[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b07a64">  <td>24/02/06 12:22:41</td>   <td>5249</td> <td title="&lt;&lt;BaseClass.afterSuite()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&lt;&lt;afterSuite</td> 
+<tr bgcolor="b0a6f6">  <td>24/02/06 12:45:00</td>   <td>5129</td> <td title="&lt;&lt;BaseClass.afterSuite()[pri:0, instance:com.seta.testcases.BingSearchTests@76508ed1]">&lt;&lt;afterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:29</td>   <td>-7072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;YahooSearchTests.beforeMethod()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="84f46f">  <td>24/02/06 12:44:53</td>   <td>-2198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BingSearchTests.beforeMethod()[pri:0, instance:com.seta.testcases.BingSearchTests@76508ed1]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:29</td>   <td>-7072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;YahooSearchTests.beforeMethod()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:29</td>   <td>-7072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;YahooSearchTests.beforeMethod()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:29</td>   <td>-7072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;YahooSearchTests.beforeMethod()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:29</td>   <td>-7072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;YahooSearchTests.beforeMethod()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:29</td>   <td>-7072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;YahooSearchTests.beforeMethod()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b07a64">  <td>24/02/06 12:21:48</td>   <td>-48331</td> <td title="&gt;&gt;BaseClass.beforeSuite()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&gt;&gt;beforeSuite</td> 
+<tr bgcolor="b0a6f6">  <td>24/02/06 12:44:51</td>   <td>-3670</td> <td title="&gt;&gt;BaseClass.beforeSuite()[pri:0, instance:com.seta.testcases.BingSearchTests@76508ed1]">&gt;&gt;beforeSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b07a64">  <td>24/02/06 12:21:48</td>   <td>-48254</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&gt;&gt;setup</td> 
+<tr bgcolor="b0a6f6">  <td>24/02/06 12:44:51</td>   <td>-3590</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.seta.testcases.BingSearchTests@76508ed1]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b07a64">  <td>24/02/06 12:22:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">&lt;&lt;tearDown</td> 
+<tr bgcolor="b0a6f6">  <td>24/02/06 12:44:55</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.seta.testcases.BingSearchTests@76508ed1]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:21:57</td>   <td>-38597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YahooSearchTests.verifyYahooSearchFirstLinkTest()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">verifyYahooSearchFirstLinkTest</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:04</td>   <td>-32187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YahooSearchTests.verifyYahooSearchTopThreeTermResultsTest()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">verifyYahooSearchTopThreeTermResultsTest</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:12</td>   <td>-24174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YahooSearchTests.verifyYahooSearchWithAlphaNumericCharTermTest()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">verifyYahooSearchWithAlphaNumericCharTermTest</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:18</td>   <td>-18068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YahooSearchTests.verifyYahooSearchWithBadTermTest()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">verifyYahooSearchWithBadTermTest</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:24</td>   <td>-12234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YahooSearchTests.verifyYahooSearchWithMisSpelledCorrectionTermTest()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">verifyYahooSearchWithMisSpelledCorrectionTermTest</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b0a6f6">  <td>24/02/06 12:22:30</td>   <td>-5993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YahooSearchTests.verifyYahooSearchWithSpecialCharTermTest()[pri:0, instance:com.seta.testcases.YahooSearchTests@3911c2a7]">verifyYahooSearchWithSpecialCharTermTest</td> 
+<tr bgcolor="84f46f">  <td>24/02/06 12:44:53</td>   <td>-1902</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BingSearchTests.verifyBingTopThreeTermSearchResultsTest()[pri:0, instance:com.seta.testcases.BingSearchTests@76508ed1]">verifyBingTopThreeTermSearchResultsTest</td> 
   <td>main@498931366</td>   <td></td> </tr>
 </table>
