--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.seta.testcases.BingSearchTests.verifyBingSearchWithSpecialCharTermTest</td></tr>
+<tr><td>com.seta.testcases.BingSearchTests.verifyBingSearchFirstLinkTest</td></tr>
+<tr><td>com.seta.testcases.BingSearchTests.verifyBingSearchWithAlphaNumericCharTermTest</td></tr>
+<tr><td>com.seta.testcases.BingSearchTests.verifyBingSearchWithMisSpelledCorrectionTermTest</td></tr>
 </table>
